# MISW4406-202411-Entrega-3

./: .gitignore  .gitpod.yml  Dockerfile  README.md  bff.Dockerfile  companias.Dockerfile  config.sh  contratos.Dockerfile  deployment-steps-gcp  docker-compose.yml  k8s-ingress-propiedadesalpes.yaml  k8s-propiedadesalpes.yaml  propiedades.Dockerfile  propiedadesalpes.Dockerfile  pyproject.toml  requirements.txt  saga.Dockerfile  secrets-propiedadesalpes.yml
collections/: MISW4406-2024-11-PDA.postman_collection.json
data/bookkeeper/ledgers/current/: VERSION  lastMark
data/zookeeper/version-2/: snapshot.2e9  snapshot.30c  snapshot.32f  snapshot.354
src/aeroalpes/seedwork/dominio/: objetos_valor.py
src/bff/api/: __init__.py  recursos.py
src/bff/modulos/schema/: modelo.py
src/companias/api/: __init__.py  recursos.py
src/companias/config/: config.py  uow.py
src/companias/seedwork/dominio/: objetos_valor.py  repositorios.py
src/companias/seedwork/infraestructura/: uow.py
src/contratos/api/: __init__.py  recursos.py
src/contratos/seedwork/dominio/: entidades.py  objetos_valor.py  (+1 more)
src/propiedades/api/: __init__.py  recursos.py
src/propiedadesalpes/api/: __init__.py  compania.py  companias.py  compañias.py  contrato.py  propiedad.py
src/propiedadesalpes/config/: config.py  db.py  uow.py
src/sagas/: __init__.py
src/sagas/api/: __init__.py  recursos.py  utils.py
src/sagas/aplicacion/: __init__.py  comandos.py  dto.py  handlers.py  mapeadores.py
src/sagas/infraestructura/: consumidores.py  despachadores.py  dto.py  repositorios.py  utils.py
(+245 files in other folders)
